# SobelFilter

./: .gitignore  CMakeLists.txt  exec.sh  main.cpp
include/: Image.hpp  SobelFilter.hpp
src/: Image.cpp
